--- a/app/stylesheets/global/layout.scss
+++ b/app/stylesheets/global/layout.scss
@@ -1,12 +1,13 @@
 body {
     color: $white;
+    font-family: $family;
     background: $base;
 }
 html, body { position: relative; padding: 0; margin: 0; width: 100%; height: 100%; }
 
     // Anchors
     a {
-        color: $orange;
+        color: $black;
         text-decoration: none;
 
         &:hover { text-decoration: underline; }
