--- a/app/stylesheets/global/variables.scss
+++ b/app/stylesheets/global/variables.scss
@@ -1,15 +1,20 @@
 // Fuckbeards Variables
 
     // Brand Colors
+    $black:  #000000;
     $white:  #ffffff;
     $orange: #d36a0e;
+    $silver: #f2f2f2;
 
     // Grays
     $base: #f7f7f7;
     $basedark: darken($base, 82%);
 
     // Typography
-    $normal:   300;
-    $regular:  300;
-    $semibold: 500;
+    $light:    300;
+    $normal:   400;
+    $regular:  400;
+    $semibold: 600;
     $bold:     700;
+    $bbold:    800;
+    $family:   'Open Sans';
