--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,7 +2,8 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        title=(`Fuckbeards${title ? (' - ' + title) : ' - Wear Your Beard'}`)
+        title=(`Matt Goucher${title ? (' - ' + title) : ' - Software Engineer in Seattle, Washington'}`)
+        link(href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" rel="stylesheet" type="text/css")
         link(rel="stylesheet" type="text/css" href="/stylesheets/app.css")
         meta(name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no")
     body(class=(bodyclass))
