--- a/app/views/layout/header.jade
+++ b/app/views/layout/header.jade
@@ -1,2 +1,6 @@
 header.site-header
-    h1.logo: a(href="/") Fuckbeards
+  h1.logo: a(href="/") Matt Goucher
+  h3.description Seattle based software engineer &amp; aspiring cyclist
+
+  section.about
+    figure.graphic
