--- a/app/stylesheets/pages/error.scss
+++ b/app/stylesheets/pages/error.scss
@@ -8,7 +8,7 @@
         width: 80%;
         word-break: break-word;
         border-radius: 2px;
-        background: $orange;
+        background: $blue;
         box-shadow: 0 0 0 1px rgba($white, 0.5);
 
         &:before {
@@ -20,7 +20,7 @@
             color: $white;
             content: 'Stack Trace:';
             text-transform: uppercase;
-            background: darken($orange, 5%);
+            background: darken($blue, 5%);
             border-radius: 2px 2px 0 0;
         }
     }
