--- a/app/views/layout/header.jade
+++ b/app/views/layout/header.jade
@@ -1,6 +1,7 @@
 header.site-header
   h1.logo: a(href="/") Matt Goucher
-  h3.description Seattle based software engineer &amp; aspiring cyclist
+  h3.description Seattle based software engineer, aspiring cyclist
 
-  section.about
-    figure.graphic
+  if home
+    section.about
+      figure.graphic
