--- a/app/stylesheets/global/layout.scss
+++ b/app/stylesheets/global/layout.scss
@@ -9,6 +9,7 @@ html, body { position: relative; padding: 0; margin: 0; width: 100%; height: 100
     a {
         color: $black;
         text-decoration: none;
+        transition: color 120ms ease;
 
-        &:hover { text-decoration: underline; }
+        &:hover { color: $blue; text-decoration: underline; }
     }
