--- a/app/stylesheets/global/variables.scss
+++ b/app/stylesheets/global/variables.scss
@@ -1,6 +1,8 @@
 // Fuckbeards Variables
 
     // Brand Colors
+    $blue:   #596984;
+    $gray:   #C2c2c2;
     $black:  #000000;
     $white:  #ffffff;
     $orange: #d36a0e;
