--- a/app/stylesheets/pages/home.scss
+++ b/app/stylesheets/pages/home.scss
@@ -1,7 +1,29 @@
 .page-home {
+
+  .container {
+    margin: 0;
+    padding: 0 25px 25px;
+    background: $white;
+  }
+
+  // Lifestyle Branding
+  .graphic {
+    display: block;
+    padding: 0 0 35% 0;
+    background: url('/assets/lakewashington.jpg') center 30% no-repeat;
+    background-size: cover;
+  }
+
+  // Site Header
   .site-header {
     margin-bottom: 0;
+    box-shadow: none;
+  }
 
-    .description { padding: 0 0 25px 0; }
+  // About Me
+  .about-me {
+    padding: 25px;
+    color: darken($gray, 50%);
+    box-shadow: inset 0 1px 0 0 $silver;
   }
 }
