--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -9,4 +9,5 @@ block content
     //- About Me
     section.about-me.container
       figure.matt
-      | Matt Goucher is a Washington based software engineer, with a background in javascript. With several years of experience in a wide range fields including e-commerce and the music industry, he's well versed in both technical and non-technical aspects of business. He's currently focused on all things Node and leveraging modern frameworks to build large scale applications.
+      p.about
+        | Matt Goucher is a Washington based software engineer, with a background in javascript. With several years of experience in a wide range fields including e-commerce and the music industry, he's well versed in both technical and non-technical aspects of business. He's currently focused on all things Node and leveraging modern frameworks to build large scale applications.
