--- a/app/views/layout/footer.jade
+++ b/app/views/layout/footer.jade
@@ -3,10 +3,10 @@ footer.site-footer
 
   ol.socials
     li.social.twitter
-      a(href='#'): include ../icons/twitter
+      a(href='https://twitter.com/matt_goucher' target='_blank'): include ../icons/twitter
     li.social.dribbble
-      a(href='#'): include ../icons/dribbble
+      a(href='https://dribbble.com/mattgoucher' target='_blank'): include ../icons/dribbble
     li.social.linkedin
-      a(href='#'): include ../icons/linkedin
+      a(href='https://linkedin.com/in/mattgoucher' target='_blank'): include ../icons/linkedin
     li.social.instagram
-      a(href='#'): include ../icons/instagram
+      a(href='https://instagram.com/mattgoucher' target='_blank'): include ../icons/instagram
