--- a/app/stylesheets/global/mixins.scss
+++ b/app/stylesheets/global/mixins.scss
@@ -12,3 +12,10 @@
         @content;
     }
 }
+@mixin clearfix {
+    &:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+}
