--- a/app/stylesheets/pages/home.scss
+++ b/app/stylesheets/pages/home.scss
@@ -9,6 +9,7 @@
   // Lifestyle Branding
   .graphic {
     display: block;
+    // display: none;
     padding: 0 0 35% 0;
     background: url('/assets/lakewashington.jpg') center 30% no-repeat;
     background-size: cover;
@@ -25,5 +26,21 @@
     padding: 25px;
     color: darken($gray, 50%);
     box-shadow: inset 0 1px 0 0 $silver;
+    @include clearfix;
+
+    .about {
+      margin: 0;
+      padding: 0;
+    }
+
+    .matt {
+      display: none;
+      float: left;
+      margin: 0 25px 0 0;
+      padding: 0 0 20% 0;
+      width: 25%;
+      background: url('https://camo.githubusercontent.com/cb183ee245bce237b0575c08d97b75db4b7d53db/68747470733a2f2f7569382e73332e616d617a6f6e6177732e636f6d2f6173736574732f676f75636865722f494d475f333438382e4a5047') center center no-repeat;
+      background-size: cover;
+    }
   }
 }
