--- a/app/stylesheets/global/header.scss
+++ b/app/stylesheets/global/header.scss
@@ -1,34 +1,60 @@
 .site-header {
-  margin: 0 0 40px 0;
-  padding: 25px;
-  color: $black;
-  text-align: center;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  padding: ($grid / 2) 0;
+  text-align: left;
   background: $white;
-  box-shadow: 0 1px 0 0 $silver;
+  border-bottom: 1px solid $gray;
+  @include clearfix;
 
   // Logo
   .logo {
     display: block;
-    margin: 0 0 10px 0;
-    font-size: 22px;
+    margin: 0 0 ($grid / 4) 0;
+    font-size: 24px;
     line-height: 1;
-    font-weight: $semibold;
-    text-align: center;
+    font-weight: $bold;
     text-transform: uppercase;
 
     a {
-      margin: 0 0 0 0.25em;
+      color: $black;
       outline: none;
-      letter-spacing: 0.25em;
       text-decoration: none;
+
+      &:hover { color: $blue; }
     }
   }
 
   // Description
   .description {
     display: block;
+    color: $dgray;
+    font-size: $grid / 2;
     line-height: 1;
-    font-size: 14px;
     font-weight: $light;
   }
+
+  // Navigation
+  .nav {
+    padding: ($grid / 4) 0;
+    float: right;
+
+    .nav-item {
+      display: block;
+      padding: 0 ($grid / 4);
+      font-size: $grid / 2;
+      line-height: $grid;
+      border-radius: $radius;
+      border: 2px solid $gray;
+      text-decoration: none;
+
+      &:hover {
+        color: $white;
+        border-color: $blue;
+        background-color: $blue;
+      }
+    }
+  }
+
 }
