--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -3,7 +3,7 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         title=(`Matt Goucher${title ? (' - ' + title) : ' - Software Engineer in Seattle, Washington'}`)
-        link(href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" rel="stylesheet" type="text/css")
+        link(href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css")
         link(rel="stylesheet" type="text/css" href="/stylesheets/app.css")
         meta(name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no")
     body(class=(bodyclass))
@@ -12,7 +12,7 @@ html(lang="en")
         include layout/header
 
         //- Contnet
-        block content
+        //- block content
 
         //- Footer
-        include layout/footer
+        //- include layout/footer
