--- a/app/stylesheets/global/layout.scss
+++ b/app/stylesheets/global/layout.scss
@@ -1,21 +1,27 @@
 body {
-    color: $white;
-    line-height: 1.65em;
-    font-family: $family;
-    background: $base;
+  color: $white;
+  line-height: 1.65em;
+  font-family: $family;
+  background: $white;//$base;
 }
 html, body { position: relative; padding: 0; margin: 0; width: 100%; height: 100%; }
 
-    // Anchors
-    a {
-        color: $black;
-        text-decoration: none;
-        transition: color 120ms ease;
+  // Anchors
+  a {
+    color: $black;
+    text-decoration: none;
 
-        &:hover { color: $blue; text-decoration: underline; }
-    }
+    &:hover { color: $blue; text-decoration: underline; }
+  }
 
-    // Container
-    .container {
-      margin: 0 25px;
-    }
+  // Container
+  .container {
+    margin: 0 auto;
+    padding: 0 ($grid / 2);
+    max-width: $container;
+    @include clearfix;
+  }
+
+  // Utility
+  .pull-left { float: left; }
+  .pull-right { float: right; }
