--- a/app/views/layout/header.jade
+++ b/app/views/layout/header.jade
@@ -1,3 +1,7 @@
 header.site-header
-  h1.logo: a(href="/") Matt Goucher
-  h3.description Seattle based software engineer, aspiring cyclist
+  .container
+    .details.pull-left
+      h1.logo: a(href="/") Matt Goucher
+      h3.description Seattle based software engineer, aspiring cyclist
+    nav.nav.pull-right
+      a.nav-item(href="#") LinkedIn
