Rework strava model, add test suite

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -6,6 +6,9 @@
     @import "global/mixins";
     @import "global/layout";
 
+    // Modules
+    @import "modules/stack";
+
     // Layout
     @import "global/header";
     @import "global/footer";
