--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -12,7 +12,8 @@ html(lang="en")
         include layout/header
 
         //- Contnet
-        //- block content
+        .site-content
+          block content
 
         //- Footer
         //- include layout/footer
