--- a/app/stylesheets/global/layout.scss
+++ b/app/stylesheets/global/layout.scss
@@ -14,6 +14,11 @@ html, body { position: relative; padding: 0; margin: 0; width: 100%; height: 100
     &:hover { color: $blue; text-decoration: underline; }
   }
 
+  // Site Content
+  .site-content {
+    padding: (85px + $grid) 0 0 0;
+  }
+
   // Container
   .container {
     margin: 0 auto;
