Compute distance, cleanup athlete request

--- a/app/stylesheets/global/header.scss
+++ b/app/stylesheets/global/header.scss
@@ -1,6 +1,7 @@
 .site-header {
   position: fixed;
   top: 0; left: 0;
+  z-index: 100;
   width: 100%;
   padding: ($grid / 2) 0;
   text-align: left;
