--- a/app/stylesheets/global/header.scss
+++ b/app/stylesheets/global/header.scss
@@ -1,7 +1,4 @@
 .site-header {
-  position: fixed;
-  top: 0; left: 0;
-  z-index: 100;
   width: 100%;
   padding: ($grid / 2) 0;
   text-align: left;
@@ -58,4 +55,9 @@
     }
   }
 
+  @media screen and (max-width: 769px) {
+    text-align: center;
+    .nav { display: none; }
+    .details { float: none; }
+  }
 }
