--- a/app/stylesheets/global/layout.scss
+++ b/app/stylesheets/global/layout.scss
@@ -1,9 +1,9 @@
 body {
-  color: $black;
-  line-height: 1.65em;
+  color: $basedark;
+  line-height: 1.65;
   font-family: $family;
-  font-weight: $light;
-  background: $white;//$base;
+  font-weight: $normal;
+  background: #f8f8f8;//$white;//$base;
 }
 html, body { position: relative; padding: 0; margin: 0; width: 100%; height: 100%; }
 
@@ -17,16 +17,37 @@ html, body { position: relative; padding: 0; margin: 0; width: 100%; height: 100
 
   // Site Content
   .site-content {
-    padding: (85px + $grid) 0 0 0;
+    padding: $grid 0 0 0;
   }
 
   // Container
   .container {
     margin: 0 auto;
-    padding: 0 ($grid / 2);
+    padding: 0 $grid;
     max-width: $container;
-    color: $black;
     @include clearfix;
+  }
+
+  // Simple Typography
+  .content {
+    h1 { font-size: $grid; }
+    h2 { font-size: $grid * .70; }
+    h3 { font-size: $grid * .60; }
+    h4 { font-size: $grid * .55; }
+    h5 { font-size: $grid * .50; }
+    h6 { font-size: $grid * .45; }
+    h1, h2, h3, h4, h5, h6 {
+      margin: 0 0 0.5em;
+      color: $black;
+      line-height: 1;
+    }
+    p {
+      margin: 0 0 1em;
+      letter-spacing: 0.01em;
+    }
+    a {
+      color: $blue;
+    }
   }
 
   // Utility
