--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,7 +1,28 @@
 extends ../layout
 block content
-  .container
-    h3 Athlete
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    pre.stack !{JSON.stringify(bikes)}
-    pre.stack !{JSON.stringify(athlete)}
+  .container.content
+    figure
+    .bio
+      h2 Hello World.
+      p
+        | I'm Matt Goucher. In March 2016, I left California and moved to Seattle, Washington to start the next path in my career. Presently, I'm a part of the awesome team at 
+        a(href="https://concur.com") Concur
+        | .
+      p 
+        | Previously, I was a senior devleoper on the 
+        a(href="http://creativeda.sh") Creativedash 
+        | team, where I built and maintained 
+        a(href="https://ui8.net") UI8.net
+        | , the marketplace for designers to get wireframes and other resources. While at CD, 
+        | I had the great opportunity to collaborate with some really tallented people at  
+        a(href="https://adobe.com") Adobe
+        | . As one of my last hurrahs, I worked with 
+        a(href="https://dribbble.com/dannpetty") Dann Petty
+        |  to put together the 
+        a(href="http://montues.com") Montues.com
+        | , the non-conference for creatives.
+      p
+        | In 2011, I started working for 
+        a(href="http://wonderfulunion.com") Wonderful Union. 
+        | Alongside a team of amazing people, I built and maintained sites for a 
+        | handful of major label musicians, and eventually went on to lead the front-end team.
