--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,7 +1,6 @@
 extends ../layout
 block content
   .container.content
-    figure
     .bio
       h2 Hello World.
       p
@@ -26,3 +25,5 @@ block content
         a(href="http://wonderfulunion.com") Wonderful Union. 
         | Alongside a team of amazing people, I built and maintained sites for a 
         | handful of major label musicians, and eventually went on to lead the front-end team.
+    figure(style="background-image: url(https://scontent-sea1-1.cdninstagram.com/t51.2885-15/e35/12935124_455457971316195_757506177_n.jpg)")
+    figure(style="background-image: url(https://scontent-sea1-1.cdninstagram.com/t51.2885-15/e35/12965276_1727988290778891_847345324_n.jpg)")
