--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -21,7 +21,7 @@ block content
         a(href="http://montues.com") Montues.com
         | , the non-conference for creatives.
       p
-        | In 2011, I started working for 
+        | In 2011, I was working for 
         a(href="http://wonderfulunion.com") Wonderful Union. 
         | Alongside a team of amazing people, I built and maintained sites for a 
         | handful of major label musicians, and eventually went on to lead the front-end team.
