--- a/app/views/layout/header.jade
+++ b/app/views/layout/header.jade
@@ -4,4 +4,4 @@ header.site-header
       h1.logo: a(href="/") Matt Goucher
       h3.description Seattle based software engineer, aspiring cyclist
     nav.nav.pull-right
-      a.nav-item(href="#") LinkedIn
+      a.nav-item(href="https://linkedin.com/in/mattgoucher") LinkedIn
