--- a/app/stylesheets/global/variables.scss
+++ b/app/stylesheets/global/variables.scss
@@ -1,7 +1,7 @@
 // Fuckbeards Variables
 
   // Brand Colors
-  $blue:   #2FC0CE;
+  $blue:   #2FC59D;
   $gray:   #eeeeee;
   $dgray:  #85898E;
   $black:  #000000;
@@ -10,7 +10,7 @@
   $silver: #f2f2f2;
 
   // Grays
-  $base: #f7f7f7;
+  $base: #fafafa;
   $basedark: darken($base, 75%);
 
   // Typography
@@ -24,7 +24,7 @@
 
   // Grid Size
   $grid: 32px;
-  $container: 1200px;
+  $container: 1040px;
 
   // Stylistic
-  $radius: 4px;
+  $radius: 2px;
