--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,7 +1,8 @@
 extends ../layout
 block content
-  .container.content
-    .bio
+  figure.hero
+  .container
+    .bio.content.main
       h2 Hello World.
       p
         | I'm Matt Goucher. In March 2016, I left California and moved to Seattle, Washington to start the next path in my career. Presently, I'm a part of the awesome team at 
@@ -25,5 +26,3 @@ block content
         a(href="http://wonderfulunion.com") Wonderful Union. 
         | Alongside a team of amazing people, I built and maintained sites for a 
         | handful of major label musicians, and eventually went on to lead the front-end team.
-    figure(style="background-image: url(https://scontent-sea1-1.cdninstagram.com/t51.2885-15/e35/12935124_455457971316195_757506177_n.jpg)")
-    figure(style="background-image: url(https://scontent-sea1-1.cdninstagram.com/t51.2885-15/e35/12965276_1727988290778891_847345324_n.jpg)")
