--- a/app/stylesheets/global/layout.scss
+++ b/app/stylesheets/global/layout.scss
@@ -3,7 +3,7 @@ body {
   line-height: 1.65;
   font-family: $family;
   font-weight: $normal;
-  background: #f8f8f8;//$white;//$base;
+  background: $base;
 }
 html, body { position: relative; padding: 0; margin: 0; width: 100%; height: 100%; }
 
@@ -17,7 +17,7 @@ html, body { position: relative; padding: 0; margin: 0; width: 100%; height: 100
 
   // Site Content
   .site-content {
-    padding: $grid 0 0 0;
+    padding: $grid 0;
   }
 
   // Container
@@ -26,10 +26,20 @@ html, body { position: relative; padding: 0; margin: 0; width: 100%; height: 100
     padding: 0 $grid;
     max-width: $container;
     @include clearfix;
+
+    .main {
+      float: left;
+      width: 60%;
+    }
   }
 
   // Simple Typography
   .content {
+    padding: $grid;
+    background: $white;
+    border: 1px solid $gray;
+    border-radius: $radius;
+
     h1 { font-size: $grid; }
     h2 { font-size: $grid * .70; }
     h3 { font-size: $grid * .60; }
@@ -44,9 +54,13 @@ html, body { position: relative; padding: 0; margin: 0; width: 100%; height: 100
     p {
       margin: 0 0 1em;
       letter-spacing: 0.01em;
+
+      &:last-of-type { margin: 0; }
     }
     a {
-      color: $blue;
+      color: $dgray;
+
+      &:hover { color: $blue; }
     }
   }
 
