Null duplicate link

--- a/app/views/layout/header.jade
+++ b/app/views/layout/header.jade
@@ -4,5 +4,5 @@ header.site-header
       h1.logo: a(href="/") Matt Goucher
       h3.description Seattle based software engineer, aspiring cyclist
     nav.nav.pull-right
-      a.nav-item.active(href="https://linkedin.com/in/mattgoucher") My Story
+      a.nav-item.active(href="#") My Story
       a.nav-item(href="https://linkedin.com/in/mattgoucher") Contact
