Fix mobile breakpoints

--- a/app/stylesheets/pages/home.scss
+++ b/app/stylesheets/pages/home.scss
@@ -26,10 +26,9 @@
   }
 
   @media screen and (max-width: 768px) {
-    .bio { width: 100%; }
-    figure {
-      clear: both;
-      padding: 0 0 60% 0;
+    .bio {
+      margin: 0;
+      width: auto;
     }
   }
 }
