--- a/app/stylesheets/global/layout.scss
+++ b/app/stylesheets/global/layout.scss
@@ -30,6 +30,10 @@ html, body { position: relative; padding: 0; margin: 0; width: 100%; height: 100
     .main {
       float: left;
       width: 60%;
+
+      @media screen and (max-width: 769px) {
+        float: none;
+      }
     }
   }
 
