--- a/app/stylesheets/modules/stack.scss
+++ b/app/stylesheets/modules/stack.scss
@@ -1,6 +1,7 @@
 pre.stack {
     position: relative;
     margin: 0 auto $grid;
+    clear: both;
     padding: 15px;
     color: $white;
     word-break: break-word;
