--- a/app/stylesheets/global/layout.scss
+++ b/app/stylesheets/global/layout.scss
@@ -22,19 +22,27 @@ html, body { position: relative; padding: 0; margin: 0; width: 100%; height: 100
 
   // Container
   .container {
-    margin: 0 auto;
+    margin: 0 auto $grid;
     padding: 0 $grid;
     max-width: $container;
     @include clearfix;
 
+    // Last Container
+    &:last-of-type { margin-bottom: 0; }
+
+    // Main Column
     .main {
       float: left;
+      margin: 0 $grid 0 0;
       width: 60%;
 
       @media screen and (max-width: 769px) {
         float: none;
       }
     }
+
+    // Sidebar
+    .aside { overflow: hidden; }
   }
 
   // Simple Typography
