--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -43,5 +43,5 @@ block content
               small climbed this month
         .map
 
-  .container: pre.stack !{JSON.stringify(stats)}
-  .container: pre.stack !{JSON.stringify(athlete)}
+  //- .container: pre.stack !{JSON.stringify(stats)}
+  //- .container: pre.stack !{JSON.stringify(athlete)}
