--- a/app/stylesheets/pages/home.scss
+++ b/app/stylesheets/pages/home.scss
@@ -25,7 +25,7 @@
 
   @media screen and (max-width: 768px) {
     .bio {
-      margin: 0;
+      margin: 0 0 $grid;
       width: auto;
     }
   }
