--- a/app/stylesheets/modules/stats.scss
+++ b/app/stylesheets/modules/stats.scss
@@ -14,6 +14,7 @@
     strong {
       display: block;
       margin: 0 0 2px 0;
+      font-weight: $normal;
     }
     small {
       display: block;
