--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -20,7 +20,7 @@ block content
         a(href="https://dribbble.com/dannpetty") Dann Petty
         |  to put together the 
         a(href="http://montues.com") Montues.com
-        | , the non-conference for creatives.
+        | , a snowboard infused conference for creatives.
       p
         | In 2011, I was working for 
         a(href="http://wonderfulunion.com") Wonderful Union. 
