Babel front-end, remove stale assets

--- a/app/stylesheets/pages/home.scss
+++ b/app/stylesheets/pages/home.scss
@@ -6,7 +6,7 @@
   // Hero
   .hero {
     display: block;
-    margin: 0 0 $grid 0;
+    margin: 0 0 (-$grid) 0;
     padding: 0 0 25%;
     // background: url('https://scontent-sea1-1.cdninstagram.com/t51.2885-15/e35/12935124_455457971316195_757506177_n.jpg') center center no-repeat;
     background: url('https://scontent-sea1-1.cdninstagram.com/t51.2885-15/e35/12965276_1727988290778891_847345324_n.jpg') center center no-repeat;
