--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -13,10 +13,8 @@ block content
         a(href="http://creativeda.sh") Creativedash 
         | team, where I built and maintained 
         a(href="https://ui8.net") UI8.net
-        | , the marketplace for designers to get wireframes and other resources. While at CD, 
-        | I had the great opportunity to collaborate with some really tallented people at  
-        a(href="https://adobe.com") Adobe
-        | . As one of my last hurrahs, I worked with 
+        | , the marketplace for designers to get wireframes and other resources.
+        | As one of my last hurrahs, I worked with 
         a(href="https://dribbble.com/dannpetty") Dann Petty
         |  to put together the 
         a(href="http://montues.com") Montues.com
