--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -3,27 +3,32 @@ block content
   figure.hero
   .container
     .bio.content(class=(stats ? 'main' : ''))
-      h3 Hello World.
-      p
-        | I'm Matt Goucher. In March 2016, I left California and moved to Seattle, Washington to start the next path in my career. Presently, I'm a part of the awesome team at 
-        a(href="https://concur.com") Concur
-        | .
-      p 
-        | Previously, I was a senior devleoper on the 
-        a(href="http://creativeda.sh") Creativedash 
-        | team, where I built and maintained 
-        a(href="https://ui8.net") UI8.net
-        | , the marketplace for designers to get wireframes and other resources.
-        | As one of my last hurrahs, I worked with 
-        a(href="https://dribbble.com/dannpetty") Dann Petty
-        |  to put together the 
-        a(href="http://montues.com") Montues.com
-        | , a snowboard infused conference for creatives.
-      p
-        | In 2011, I was working for 
-        a(href="http://wonderfulunion.com") Wonderful Union. 
-        | Alongside a team of amazing people, I built and maintained sites for a 
-        | handful of major label musicians, and eventually went on to lead the front-end team.
+      section
+        h3 Hello World.
+        p
+          | I'm Matt Goucher. In March 2016, I left California and moved to Seattle, Washington to start the next path in my career. Presently, I'm a part of the awesome team at 
+          a(href="https://concur.com") Concur
+          | .
+        p 
+          | While I was a senior devleoper on the 
+          a(href="http://creativeda.sh") Creativedash 
+          | team, I built and maintained 
+          a(href="https://ui8.net") UI8.net
+          | , a marketplace for designers to get wireframes and other resources.
+          | I had the pleasure of working with master creative  
+          a(href="https://dribbble.com/dannpetty") Dann Petty
+          |  to put together the 
+          a(href="http://montues.com") Montues.com
+          | , a snowboard infused conference for creatives.
+        p
+          | In 2011, I worked for 
+          a(href="http://wonderfulunion.com") Wonderful Union. 
+          | Alongside a team of amazing people, I built and maintained sites for a 
+          | handful of major label musicians, and eventually went on to lead the front-end team.
+      //- section
+      //-   h3 Passions
+        p
+          
 
     if stats
       .strava-stats.content.aside
