Add content security policy

--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -15,7 +15,7 @@ block content
           | team, I built and maintained 
           a(href="https://ui8.net") UI8.net
           | , a marketplace for designers to get wireframes and other resources.
-          | I had the pleasure of working with master creative  
+          | I had the pleasure of working with  
           a(href="https://dribbble.com/dannpetty") Dann Petty
           |  to put together the 
           a(href="http://montues.com") Montues.com
@@ -23,7 +23,7 @@ block content
         p
           | In 2011, I worked for 
           a(href="http://wonderfulunion.com") Wonderful Union. 
-          | Alongside a team of amazing people, I built and maintained sites for a 
+          | Alongside a team of talented people, I built and maintained sites for a 
           | handful of major label musicians, and eventually went on to lead the front-end team.
       //- section
       //-   h3 Passions
