--- a/app/stylesheets/modules/stats.scss
+++ b/app/stylesheets/modules/stats.scss
@@ -33,7 +33,7 @@
     z-index: 0;
     width: 100%;
     height: 100%;
-    background: url('https://api.mapbox.com/styles/v1/mattgoucher/cin76hfpt0035bckvfmzolaki/static/-122.246995,47.589348,10.14,0.00,0.00/600x400@2x?access_token=pk.eyJ1IjoibWF0dGdvdWNoZXIiLCJhIjoiY2luNzZnbno2MGFuNXV1bHp5aXVqeXFibyJ9.haF1KHni3wwg_y97JJMv6w') center center no-repeat;
+    background: url('/assets/map.png') center center no-repeat;
     background-size: cover;
   }
 }
