--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -5,30 +5,12 @@ block content
     .bio.content(class=(stats ? 'main' : ''))
       section
         h3 Hello World.
-        p
-          | I'm Matt Goucher. In March 2016, I left California and moved to Seattle, Washington to start the next path in my career. Presently, I'm a part of the awesome team at 
-          a(href="https://concur.com") Concur
-          | .
-        p 
-          | While I was a senior devleoper on the 
-          a(href="http://creativeda.sh") Creativedash 
-          | team, I built and maintained 
-          a(href="https://ui8.net") UI8.net
-          | , a marketplace for designers to get wireframes and other resources.
-          | I had the pleasure of working with  
-          a(href="https://dribbble.com/dannpetty") Dann Petty
-          |  to put together the 
-          a(href="http://montues.com") Montues.com
-          | , a snowboard infused conference for creatives.
-        p
-          | In 2011, I worked for 
-          a(href="http://wonderfulunion.com") Wonderful Union. 
-          | Alongside a team of talented people, I built and maintained sites for a 
-          | handful of major label musicians, and eventually went on to lead the front-end team.
-      //- section
-      //-   h3 Passions
-        p
-          
+        p I'm Matt Goucher. In March 2016, I left California and moved to Seattle, Washington to start the next path in my career. Presently, I'm a part of the awesome team at #[a(href="https://concur.com") Concur].
+        p While I was a senior devleoper on the #[a(href="http://creativeda.sh") Creativedash] team, I built and maintained #[a(href="https://ui8.net") UI8.net], a marketplace for designers to get wireframes and other resources. I had the pleasure of working with  #[a(href="https://dribbble.com/dannpetty") Dann Petty] to put together the #[a(href="http://montues.com") Montues.com], a snowboard infused conference for creatives.
+        p In 2011, I worked for #[a(href="http://wonderfulunion.com") Wonderful Union]. Alongside a team of talented people, I built and maintained sites for a handful of major label musicians, and eventually went on to lead the front-end team.
+      section
+        h3 Focus
+        p I'm currently focused on all things Javascript. I leverage modern tools like #[a(href="http://expressjs.com/") Express], #[a(href="https://facebook.github.io/react/") React], #[a(href="https://github.com/reactjs/redux") Redux], #[a(href="https://webpack.github.io/") Webpack] and #[a(href="https://www.mongodb.org/") MongoDB]. This site uses a few of them, and you can view the code on #[a(href="https://github.com/mattgoucher") GitHub].
 
     if stats
       .strava-stats.content.aside
@@ -45,6 +27,3 @@ block content
               strong #{Helpers.metersToFeet(stats.all_ride_totals.elevation_gain)} Feet
               small climbed this month
         .map
-
-  //- .container: pre.stack !{JSON.stringify(stats)}
-  //- .container: pre.stack !{JSON.stringify(athlete)}
