--- a/app/views/layout/head.jade
+++ b/app/views/layout/head.jade
@@ -1,7 +1,7 @@
 meta(property='og:title', content=`Matt Goucher${title ? (' - ' + title) : ' - Software Engineer in Seattle, Washington'}`)
 meta(property='og:site_name', content='Matt Goucher')
 meta(property='og:type', content='profile')
-meta(property='og:type', content='https://mattgoucher.com/assets/bike.jpg')
+meta(property='og:image', content='https://mattgoucher.com/assets/bike.jpg')
 meta(property='og:description', content='Matt Goucher is a Software Engineer located in Seattle, WA. Specializing in Node, React and Redux.')
 meta(name='twitter:site', content='@matt_goucher')
 meta(name='twitter:creator:id', content='99423604')
