Opt for linkedin name

--- a/app/views/layout/header.jade
+++ b/app/views/layout/header.jade
@@ -4,5 +4,4 @@ header.site-header
       h1.logo: a(href="/") Matt Goucher
       h3.description Seattle based software engineer, aspiring cyclist
     nav.nav.pull-right
-      a.nav-item.active(href="/") My Story
-      a.nav-item(href="https://linkedin.com/in/mattgoucher" target="_blank") Connect
+      a.nav-item(href="https://linkedin.com/in/mattgoucher" target="_blank") Linkedin
