Google analytics tag

--- a/app/views/layout/footer.jade
+++ b/app/views/layout/footer.jade
@@ -1,12 +1,1 @@
-footer.site-footer
-  p.memo Crafted in 2016
-
-  ol.socials
-    li.social.twitter
-      a(href='https://twitter.com/matt_goucher' target='_blank'): include ../icons/twitter
-    li.social.dribbble
-      a(href='https://dribbble.com/mattgoucher' target='_blank'): include ../icons/dribbble
-    li.social.linkedin
-      a(href='https://linkedin.com/in/mattgoucher' target='_blank'): include ../icons/linkedin
-    li.social.instagram
-      a(href='https://instagram.com/mattgoucher' target='_blank'): include ../icons/instagram
+script(type="text/javascript" src="/scripts/mg.min.js")
