--- a/app/views/layout/header.jade
+++ b/app/views/layout/header.jade
@@ -4,4 +4,9 @@ header.site-header
       h1.logo: a(href="/") Matt Goucher
       h3.description Seattle based software engineer, aspiring cyclist
     nav.nav.pull-right
-      a.nav-item(href="https://linkedin.com/in/mattgoucher" target="_blank") Linkedin
+      a.nav-item(href="https://linkedin.com/in/mattgoucher" target="_blank")
+          include ../icons/linkedin
+      a.nav-item(href="https://twitter.com/matt_goucher" target="_blank")
+          include ../icons/twitter
+      a.nav-item(href="https://github.com/mattgoucher" target="_blank")
+          include ../icons/github
