--- a/app/views/layout/header.jade
+++ b/app/views/layout/header.jade
@@ -1,7 +1,9 @@
 header.site-header
   .container
     .details.pull-left
-      h1.logo: a(href="/") Matt Goucher
+      h1.logo: a(href="/")
+        include ../icons/mountains
+        | Matt Goucher
       h3.description Seattle based software engineer, aspiring cyclist
     nav.nav.pull-right
       a.nav-item(href="https://linkedin.com/in/mattgoucher" target="_blank")
