--- a/app/stylesheets/global/header.scss
+++ b/app/stylesheets/global/header.scss
@@ -6,14 +6,23 @@
   border-bottom: 1px solid $gray;
   @include clearfix;
 
+  // box-shadow: inset 0 ($grid/2) 0 0 rgba(0, 0, 0, 0.2),
+  //             inset 0 (-$grid/2) 0 0 rgba(0, 0, 0, 0.2);
+
   // Logo
   .logo {
     display: block;
-    margin: 0 0 ($grid / 4) 0;
-    font-size: 20px;
-    line-height: 1;
-    font-weight: $bold;
-    // text-transform: uppercase;
+    margin: 0;
+    font-size: 14px;
+    line-height: 32px;
+    font-weight: $regular;
+    text-transform: uppercase;
+
+    svg {
+      display: inline-block;
+      margin: 0 ($grid / 4) 0 0;
+      vertical-align: top;
+    }
 
     a {
       color: $black;
@@ -26,7 +35,7 @@
 
   // Description
   .description {
-    display: block;
+    display: none;
     color: $dgray;
     font-size: 14px;
     line-height: 1;
@@ -35,18 +44,18 @@
 
   // Navigation
   .nav {
-    padding: 15px 0;
+    padding: 9px 0;
     float: right;
 
     .nav-item {
       display: block;
       float: left;
-      margin: 0 ($grid / 4);
+      margin: 0 ($grid / 2);
       color: $dgray;
-      width: 12px;
-      height: 12px;
+      width: 14px;
+      height: 14px;
       font-weight: $light;
-      line-height: 12px;
+      line-height: 14px;
       text-decoration: none;
 
       // Active State
@@ -54,6 +63,9 @@
 
       // Hover State
       &:hover { color: $blue; }
+
+      // Flush last icon with container
+      &:last-of-type { margin-right: 0; }
     }
   }
 
