--- a/app/stylesheets/global/header.scss
+++ b/app/stylesheets/global/header.scss
@@ -1,9 +1,11 @@
 .site-header {
+  position: fixed;
+  z-index: 5;
   width: 100%;
   padding: ($grid / 2) 0;
   text-align: left;
   background: $white;
-  border-bottom: 1px solid $gray;
+  border-bottom: 2px solid $blue;
   @include clearfix;
 
   // box-shadow: inset 0 ($grid/2) 0 0 rgba(0, 0, 0, 0.2),
